--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -3,6 +3,9 @@ layout: default
 ---
 
   <div id="homeid" class="col-sm-8">
+	<figure>
+	<img src="{{ site.url }}{{ site.baseurl }}/images/picpic/aml.jpg">
+	</figure>
         <h1>Welcome to the AML Lab</h1>
 
 	{{ content }}
