--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -4,7 +4,7 @@ layout: default
 
   <div id="homeid" class="col-sm-8">
 	<figure>
-	<img src="{{ site.url }}{{ site.baseurl }}/images/picpic/aml.jpg">
+	<img src="{{ site.url }}{{ site.baseurl }}/images/aml.png">
 	</figure>
         <h1>Welcome to the AML Lab</h1>
 
