--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -3,10 +3,10 @@ layout: default
 ---
 
   <div id="homeid" class="col-sm-8">
-	<figure>
+	<figure style="display:inline">
 	<img src="{{ site.url }}{{ site.baseurl }}/images/aml.png">
 	</figure>
-        <h1>Welcome to the AML Lab</h1>
+        <h1 style="display:inline">Welcome to the AML Lab</h1>
 
 	{{ content }}
   </div>
