--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -4,7 +4,7 @@ layout: default
 
   <div id="homeid" class="col-sm-8">
 	<figure style="display:inline">
-	<img src="{{ site.url }}{{ site.baseurl }}/images/aml.png">
+	<img src="{{ site.url }}{{ site.baseurl }}/images/aml.png" width="60%">
 	</figure>
         <h1 style="display:inline">Welcome to the AML Lab</h1>
 
