--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,22 +2,30 @@
   <div class="panel-footer">
 	<div class="container-fluid">
 	  <div class="row">
-		<div class="col-sm-4">
+	    <div class="col-sm-4">
 
-		  <p>&copy 2022 AML Lab. Website layout adapted from <a href="http://www.allanlab.org/">The Allan Lab</a>'s template.</p>
+		  <p>&copy 2022 AML Lab (The Applied Machine Learning Lab).</p>
 
 
 		   <p>  </p><p>
 
 
 		</div>
-        <div> </div>
 		<div class="col-sm-4">
 		  Contact:<br />
 		  Lau Ming Wai Academic Building<br />
 		  City University of Hong Kong<br />
 		  Hong Kong<br />
             (<a href="https://goo.gl/maps/sZq8pGfQ8jF7Y5rz9">See us on Google Maps</a>)
+		</div>
+		<div class="col-sm-4">
+
+		  <p>Website layout adapted from <a href="http://www.allanlab.org/">The Allan Lab</a>'s template.</p>
+
+
+		   <p>  </p><p>
+
+
 		</div>
 	  </div>
 	</div>
