--- a/css/main.scss
+++ b/css/main.scss
@@ -95,3 +95,20 @@ firstp {
   display: flex;
   padding-left: 0px;
 }
+
+.social-links a {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 1px solid #cddbe1;
+  text-align: center;
+  color: #69acc7;
+  display: inline-block;
+  padding-top: 8px;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+  }
+  .social-links a:hover {
+    background: #69acc7;
+    border-color: #69acc7;
+    color: white; }
