--- a/css/main.scss
+++ b/css/main.scss
@@ -114,5 +114,7 @@ firstp {
     color: white; }
 
 .center {
-	text-align: center;
+	position: absolute;
+    bottom: 0px;
+    text-align: center;
 	}
