--- a/css/main.scss
+++ b/css/main.scss
@@ -114,6 +114,13 @@ firstp {
     color: white; }
 
 .center {
-    bottom: 0px;
+    margin-top:40px;
     text-align: center;
 	}
+
+.logopic{
+    margin-left:10px;
+    margin-right:10px;
+    margin-top:5px;
+    margin-botttom:5px;
+}
