--- a/css/main.scss
+++ b/css/main.scss
@@ -115,12 +115,7 @@ firstp {
 
 .center {
     margin-top:100px;
+    border:5px;
     text-align: center;
 	}
 
-.logopic{
-    margin-left:10px;
-    margin-right:10px;
-    margin-top:5px;
-    margin-botttom:5px;
-}
