--- a/css/main.scss
+++ b/css/main.scss
@@ -114,8 +114,8 @@ firstp {
     color: white; }
 
 .center {
-    margin-top:100px;
+    margin-top:130px;
     border:5px;
-//     text-align: center;
+    text-align: center;
 	}
 
