--- a/css/main.scss
+++ b/css/main.scss
@@ -118,3 +118,10 @@ firstp {
     border:5px;
 	}
 
+.picpage img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
