--- a/css/main.scss
+++ b/css/main.scss
@@ -118,6 +118,18 @@ firstp {
     border:5px;
 	}
 
+.content{
+   width:340px;
+   height:40px;
+   position: relative;
+}
+
+.picpage{
+   width:900px;
+   height:600px;
+   position: relative;
+}
+
 .picpage img{
     position: absolute;
     top: 50%;
