--- a/css/main.scss
+++ b/css/main.scss
@@ -126,11 +126,13 @@ firstp {
 
 .picpage{
    width:900px;
+   height:500px;
    position: relative;
 }
 
 .picpage img{
     position: absolute;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
