--- a/css/main.scss
+++ b/css/main.scss
@@ -132,7 +132,8 @@ firstp {
 
 .picpage img{
     position: absolute;
-    top: 20%;
+    top: 30%;
     left: 50%;
+    transform: translate(-50%, -50%);
 }
 
