--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -6,7 +6,7 @@ layout: default
 	<figure style="display:inline">
 	<img src="{{ site.url }}{{ site.baseurl }}/images/aml.png" width="10%">
 	</figure>
-        <h1 style="display:inline">Welcome to the AML Lab</h1>
+        <h1 style="display:inline, text-align: center">Welcome to the AML Lab</h1>
 
 	{{ content }}
   </div>
