--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -3,9 +3,9 @@ layout: default
 ---
 
   <div id="homeid" class="col-sm-8">
-	<figure style="display:inline">
-	<img src="{{ site.url }}{{ site.baseurl }}/images/aml.png" width="10%">
-	</figure>
+<!--	<figure style="display:inline">-->
+<!--	<img src="{{ site.url }}{{ site.baseurl }}/images/aml.png" width="10%">-->
+<!--	</figure>-->
 <!--        <h1 style="display:inline, text-align: center">Welcome to the AML Lab</h1>-->
 	{{ content }}
   </div>
