--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 	  <div class="row">
 	    <div class="col-sm-4">
 
-		  <p>&copy 2022 AML Lab (The Applied Machine Learning Lab).</p>
+		  <p>&copy AML Lab (The Applied Machine Learning Lab).</p>
 
 
 		   <p>  </p><p>
