--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,7 @@
 	    <div class="col-sm-4">
 
 		  <p>&copy AML Lab (The Applied Machine Learning Lab).</p>
+		  <p>Website layout adapted from <a href="http://www.allanlab.org/">The Allan Lab</a>'s template.</p>
 
 
 		   <p>  </p><p>
@@ -20,7 +21,9 @@
 		</div>
 		<div class="col-sm-4">
 
-		  <p>Website layout adapted from <a href="http://www.allanlab.org/">The Allan Lab</a>'s template.</p>
+<!--		  <p>Website layout adapted from <a href="http://www.allanlab.org/">The Allan Lab</a>'s template.</p>-->
+			<p>Subscribe to our WeChat</p>
+			<img class="logopic" src="{{ site.url }}{{ site.baseurl }}/images/logopic/link.jpg">
 
 
 		   <p>  </p><p>
