--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -9,9 +9,9 @@ layout: default
 <!--        <h1 style="display:inline, text-align: center">Welcome to the AML Lab</h1>-->
 	{{ content }}
   </div>
-  <div id="others" class="col-sm-4" >
-      <img class="logopic" src="{{ site.url }}{{ site.baseurl }}/images/logopic/QRcode.jpg">
-      <div id="newsid" class="col-sm-4" >
+  <div id="otherelements" class="others" >
+      <img class="logopic" src="{{ site.url }}{{ site.baseurl }}/images/logopic/QRcode.jpg" style="width: 10px">
+      <div id="newsid">
 	  {% include news.html %}
       </div>
   </div>
