--- a/css/main.scss
+++ b/css/main.scss
@@ -75,9 +75,12 @@ firstp {
 }
 
 /* Grid overrides */
-.col-sm-4 {
+.others {
 	padding-left: 26px;
 	padding-right: 26px;
+	justify-content: space-evenly; /* 水平均匀分布 */
+    align-items: center; /* 垂直居中 */
+    flex-direction: column;
 }
 
 
