--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -10,8 +10,11 @@ layout: default
 	{{ content }}
   </div>
   <div id="otherelements" class="others" >
-      <img class="logopic" src="{{ site.url }}{{ site.baseurl }}/images/logopic/QRcode.jpg" style="width: 10px">
+      <img class="logopic" src="{{ site.url }}{{ site.baseurl }}/images/logopic/QRcode.jpg" style="width: 50px">
       <div id="newsid">
 	  {% include news.html %}
       </div>
   </div>
+<!--  <div id="newsid" class="col-sm-4" >-->
+<!--	{% include news.html %}-->
+<!--  </div>-->
