--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -9,12 +9,6 @@ layout: default
 <!--        <h1 style="display:inline, text-align: center">Welcome to the AML Lab</h1>-->
 	{{ content }}
   </div>
-  <div id="otherelements" class="others" >
-      <img class="logopic" src="{{ site.url }}{{ site.baseurl }}/images/logopic/QRcode.jpg" style="width: 50px">
-      <div id="newsid">
-	  {% include news.html %}
-      </div>
+  <div id="newsid" class="col-sm-4" >
+	{% include news.html %}
   </div>
-<!--  <div id="newsid" class="col-sm-4" >-->
-<!--	{% include news.html %}-->
-<!--  </div>-->
