--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,3 +1,4 @@
+<img class="logopic" src="{{ site.url }}{{ site.baseurl }}/images/logopic/QRcode.jpg" style="width: 50px">
 
 <div class="well">
 <h4>News</h4>
@@ -7,5 +8,4 @@
 {% endfor %}
 
 <h4><a href="{{ site.url }}{{ site.baseurl }}/allnews.html">... see all News</a></h4>
-
-    </div>
+</div>
