--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,4 +1,5 @@
-<img class="logopic" src="{{ site.url }}{{ site.baseurl }}/images/logopic/QRcode.png" style="width: 290px">
+<div class="others">
+<img class="logopic" src="{{ site.url }}{{ site.baseurl }}/images/logopic/QRcode.png">
 
 <div class="well">
 <h4>News</h4>
@@ -8,4 +9,5 @@
 {% endfor %}
 
 <h4><a href="{{ site.url }}{{ site.baseurl }}/allnews.html">... see all News</a></h4>
+</div>
 </div>
