--- a/css/main.scss
+++ b/css/main.scss
@@ -81,8 +81,8 @@ firstp {
 }
 
 .others {
-	padding-left: 26px;
-	padding-right: 26px;
+    width: 290px;
+    margin:0 auto;
     flex-direction: column;
 }
 
