--- a/css/main.scss
+++ b/css/main.scss
@@ -144,3 +144,17 @@ firstp {
     transform: translate(-50%, -50%);
 }
 
+.alumni-text-item {
+  font-size: 16px;      
+  line-height: 1.4;      
+  margin-bottom: 8px;    
+  padding: 0;
+}
+
+.alumni-text-list {
+  font-size: 16px;
+  line-height: 1.4;
+  margin: 0;
+  padding: 0;
+}
+
