--- a/css/main.scss
+++ b/css/main.scss
@@ -27,7 +27,7 @@ figcaption {
 p.byline {
 	text-align: center;
 	font-size: 18px;
-	line-height: 12px;
+	line-height: 1;
 	margin-top: -24px;
 	margin-bottom: 48px;
 }
